# mail-sender

./: Cargo.toml  Dockerfile  README.md  example.env  example.json
ics/: cv_presentation.ics  example.ics
src/: main.rs
templates/: icbd_confirmation.liquid
