[package]
name = "mail-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
ics = "0.5.8"
lettre = "0.11.14"
liquid = "0.26.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.43.0"
uuid = { version = "1.15.0", features = ["v4"] }
